--- a/index.ipynb
+++ b/index.ipynb
@@ -1061,7 +1061,7 @@
     }
    ],
    "source": [
-    "linreg.predict([crim, indus, chas, rm, age, dis, ptratio, b, lstat, rad[0], rad[1], tax[0], tax[1], tax[2]])\n"
+    "linreg.predict([crim, indus, chas, rm, age, dis, ptratio, b, lstat, rad_dummy[0], rad_dummy[1], tax[0], tax[1], tax[2]])\n"
    ]
   },
   {
