--- a/index.ipynb
+++ b/index.ipynb
@@ -1132,7 +1132,7 @@
     }
    ],
    "source": [
-    "linreg.predict([crim, indus, chas, rm, age, dis, ptratio, b, lstat, rad_dummy.iloc[:,0], rad_dummy[1], tax_dummy[0], tax_dummy[1], tax_dummy[2]])\n"
+    "linreg.predict([crim, indus, chas, rm, age, dis, ptratio, b, lstat, rad_dummy.iloc[:,0], rad_dummy.iloc[:,1], tax_dummy.iloc[:,0], tax_dummy.iloc[:,1], tax_dummy[2]])\n"
    ]
   },
   {
