Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -1118,7 +1118,7 @@
     }
    ],
    "source": [
-    "linreg.predict([crim, indus, chas, rm, age, dis, ptratio, b, lstat, rad_dummy.iloc[:,0], rad_dummy.iloc[:,1], tax_dummy.iloc[:,0], tax_dummy.iloc[:,1], tax_dummy.iloc[:,2]])\n"
+    "linreg.predict([crim, indus, chas, rm, age, dis, ptratio, b, lstat, rad_dummy.iloc[0,0], rad_dummy.iloc[0,1], tax_dummy.iloc[,0], tax_dummy.iloc[:,1], tax_dummy.iloc[:,2]])\n"
    ]
   },
   {
