Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -1138,7 +1138,7 @@
     }
    ],
    "source": [
-    "linreg.predict([crim, indus, chas, rm, age, dis, ptratio, b, lstat, rad_dummy.iloc[0,0], rad_dummy.iloc[0,1], tax_dummy.iloc[0,0], tax_dummy.iloc[0,1], tax_dummy.iloc[0,2]])\n"
+    "linreg.predict(np.array([crim, indus, chas, rm, age, dis, ptratio, b, lstat, rad_dummy.iloc[0,0], rad_dummy.iloc[0,1], tax_dummy.iloc[0,0], tax_dummy.iloc[0,1], tax_dummy.iloc[0,2]]).reshape()\n"
    ]
   },
   {
